# Clawdbot

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: feishu_receive.rs  feishu_send.rs
src/: lib.rs  main.rs  service.rs
src/ai/: constants.rs  engine.rs  mod.rs  stream.rs
src/ai/provider/: anthropic.rs  deepseek.rs  minimax.rs  mod.rs  openai.rs
src/channels/: mod.rs  traits.rs
src/channels/feishu/: client.rs  contact.rs  dispatcher.rs  group.rs  handlers.rs  media.rs  mod.rs  monitor.rs  send.rs  ws.rs
src/cli/: argv.rs  banner.rs  mod.rs  program.rs
src/core/: mod.rs
src/core/agent/: context.rs  executor.rs  mod.rs
src/core/message/: handler.rs  mod.rs  queue.rs  sender.rs  types.rs
src/core/routing/: engine.rs  mod.rs
src/core/session/: manager.rs  mod.rs  sqlite_store.rs  store.rs  types.rs
src/extensions/: mod.rs
src/infra/: mod.rs
src/infra/config/: mod.rs
src/infra/db/: mod.rs
src/infra/error/: mod.rs
src/infra/logging/: mod.rs
src/media/: mod.rs
src/sandbox/: errors.rs  mod.rs  path.rs  service.rs  types.rs
src/security/: alert.rs  audit.rs  mod.rs  storage.rs  types.rs
src/utils/: mod.rs
src/web/: mod.rs
tests/: e2e_test.rs  minimax_test.rs
